<resources>
    <string name="app_name">Luneblaze</string>
    <string name="facebook_app_id">1749596925059419</string>
    <string name="fb_login_protocol_scheme">fb1749596925059419</string>
    <string name="title_activity_session_list">SessionListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key">AIzaSyBhhBwMwgyYhPj-0CZ8YkVIgRDvsRXwYJo</string>
    <string name="filter_spinner_title">Conducting</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string-array name="channel_names">
        <item>Invites</item>
        <item>Messages</item>
        <item>Sessions</item>
        <item>Questions and Answers</item>
        <item>Articles</item>
        <item>My Activities</item>
        <item>Mass Notifications</item>
        <item>My Organisations</item>
    </string-array>
    <string-array name="channel_descriptions">
        <item>Invites on Luneblaze for various actions</item>
        <item>Luneblaze chat notifications</item>
        <item>Session related notifications</item>
        <item>Questions and Answers related notifications</item>
        <item>Articles related notifications</item>
        <item>My Activities notifications</item>
        <item>Luneblaze Mass Notifications</item>
        <item>My Organisation Notifications</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_enter_email_or_phone">Enter your email id or phone number.</string>
    <string name="please_enter_valid_phone">Please enter a valid phone number</string>
    <string name="please_enter_valid_email">Please enter a valid email</string>
    <string name="welcome_to_luneblaze">Welcome to Luneblaze</string>
    <string name="login_intro">Connect, Organize, Learn</string>
    <string name="email_phone_number">Email / Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="create_an_account">Create an account</string>
    <string name="password_must_be_8">Password must be at least 8 characters long with no spaces</string>
    <string name="friends">Friends</string>
    <string name="interests">Interests</string>
    <string name="cities">Venues</string>
    <string name="my_friends">My Friends</string>
    <string name="suggested">Suggested</string>
    <string name="mutual_friends">Mutual friends</string>
    <string name="at">at</string>
    <string name="article_title">Article title</string>
    <string name="enter_title_for_article">Enter a title for your article</string>
    <string name="article_content">Article content</string>
    <string name="enter_content_for_article">Enter article content here</string>
    <string name="add_image">Add image</string>
    <string name="create_article">Create article</string>
    <string name="please_enter_article_title">Please enter a title for the article</string>
    <string name="please_enter_article_content">Please enter article content.</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>
    <string name="requests">Requests</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="suggest_date">Suggest date</string>
    <string name="image_attach">[Image]</string>
    <string name="messages">Messages</string>
    <string name="article">Article</string>
    <string name="settings">Settings</string>
    <string name="session">Session</string>
    <string name="question">Question</string>
    <string name="profile_info">Profile Info</string>
    <string name="sessions">Sessions</string>
    <string name="initiated">Initiated</string>
    <string name="assigned">Assigned</string>
    <string name="organized">Organized</string>
    <string name="verified">Verified</string>
    <string name="upcoming">Upcoming</string>
    <string name="select_venue">Select Venue</string>
    <string name="interest_name">Interest name</string>
    <string name="emails">Emails</string>
    <string name="phones_numbers">Phone numbers</string>
    <string name="block_list">Block list</string>
    <string name="feedback">Feedback</string>
    <string name="following">Following</string>
    <string name="manage_feed">Manage feed</string>
    <string name="report_bug">Report bug</string>
    <string name="create_session">Create session</string>
    <string name="people">People</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share_to">Share to</string>
    <string name="report">Report</string>
    <string name="suggest_edit">Suggest edit</string>
    <string name="request_answer">Request answer</string>
    <string name="follow">Follow</string>
    <string name="children">Children</string>
    <string name="invite_friends">Invite friends</string>
    <string name="add_new_interest">Add new interest</string>
    <string name="sub_interests">Sub interests</string>
    <string name="send_conduct_request">Send conduct request</string>
    <string name="follow_tagged_interests">Follow tagged interests</string>
    <string name="follow_venue">Follow venue</string>
    <string name="join_discussion">Join discussion</string>
    <string name="follow_sharer">Follow sharer</string>
    <string name="stop_notifications">Stop notifications</string>
    <string name="home">Home</string>
    <string name="finalise">Finalise</string>
    <string name="add_content">Add content</string>
    <string name="followers">Followers</string>
    <string name="friend_requests">Friend requests</string>
    <string name="create_new">Create new</string>
    <string name="post">Post</string>
    <string name="post_description">Share your Knowledge</string>
    <string name="session_description">Organize a Session</string>
    <string name="article_description">Write an Article</string>
    <string name="poll_description">Get insights</string>
    <string name="interest">Interest</string>
    <string name="interest_description">Interest description</string>
    <string name="search">Search</string>
    <string name="enter_content_here">Enter content here</string>
    <string name="create_post">Create post</string>
    <string name="filter">Filter</string>
    <string name="select_all">Select all</string>
    <string name="add_poll">Add poll</string>
    <string name="poll_title">Poll title</string>
    <string name="add_a_title">Add a title</string>
    <string name="poll_options">Poll options</string>
    <string name="enter_option_here">Enter option here</string>
    <string name="please_enter_content">Please enter content</string>
    <string name="create_poll">Create poll</string>
    <string name="poll">Poll</string>
    <string name="next">Next</string>
    <string name="sessions_attended">Sessions attended</string>
    <string name="sessions_conducted">Sessions conducted</string>
    <string name="likes">Likes</string>
    <string name="shares">Shares</string>
    <string name="answers">Answers</string>
    <string name="upvotes">Upvotes</string>
    <string name="by_time">By time</string>
    <string name="last_month">Last month</string>
    <string name="last_week">Last week</string>
    <string name="this_week">This week</string>
    <string name="near_me">Near me</string>
    <string name="all">All</string>
    <string name="hide">Hide</string>
    <string name="join">Join</string>
    <string name="question_notify">Question notify</string>
    <string name="leave">Leave</string>
    <string name="unFollow">Unfollow</string>
    <string name="share_on_timeline">Share on timeline</string>
    <string name="invite">Invite</string>
    <string name="questions">Questions</string>
    <string name="block">Block</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="any">Any</string>
    <string name="joined">Joined</string>
    <string name="pick_location">Pick location</string>
    <string name="attendee">Attendee</string>
    <string name="sharer">Sharer</string>
    <string name="initiator">Initiator</string>
    <string name="group_info">Group info</string>
    <string name="assign_room">Assign room</string>
    <string name="share">Share</string>
    <string name="my_venues">My cities</string>
    <string name="articles">Articles</string>
    <string name="polls">Polls</string>
    <string name="posts">Insights</string>
    <string name="feeds">Feeds</string>
    <string name="fellows">Fellows</string>
    <string name="session_block">Session block</string>
    <string name="edit_topics">Edit topics</string>
    <string name="invite_fellows">Invite fellows</string>
    <string name="add_topics">Add topics</string>
    <string name="postpone_session">Postpone session</string>
    <string name="permitted_time">Permitted time</string>
    <string name="update_photo">Update photo</string>
    <string name="mark_attendance">Mark attendance</string>
    <string name="notifications">Notifications</string>
    <string name="upload_video">Upload video</string>
    <string name="upload_study_material">Upload study material</string>
    <string name="add_photos">Add photos</string>
    <string name="start_session">Start session</string>
    <string name="stop_session">End session</string>
    <string name="add_file">Add file</string>
    <string name="add_video">Add video</string>
</resources>