<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/invite"
        android:title="@string/invite_fellows"
        app:showAsAction="never"
        android:icon="@drawable/ic_invite_unfilled"
        />
    <item
        android:id="@+id/share_to"
        android:title="@string/share_to"
        app:showAsAction="never"
        android:icon="@drawable/ic_reply_flipped"
        />
    <item
        android:id="@+id/postpone"
        android:title="@string/postpone_session"
        app:showAsAction="never"
        android:icon="@drawable/ic_postpone_session"
        />
    <item
        android:id="@+id/assign_room"
        android:title="@string/assign_room"
        app:showAsAction="never"
        android:icon="@drawable/ic_assign_room"
        />
    <item
        android:id="@+id/create_session"
        android:title="@string/create_session"
        app:showAsAction="never"
        android:icon="@drawable/ic_session_unfilled"
        />
    <item
        android:id="@+id/edit"
        android:title="@string/add_topics"
        app:showAsAction="never"
        android:icon="@drawable/ic_add_gray"
        />
    <item
        android:id="@+id/attendance"
        android:title="@string/mark_attendance"
        app:showAsAction="never"
        android:icon="@drawable/ic_mark_attendance"
        />

    <item
        android:id="@+id/add_photos"
        android:title="@string/add_photos"
        app:showAsAction="never"
        android:icon="@drawable/ic_add_image_gray"
        />
</menu>