<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/venue_report"
        android:title="@string/report"
        app:showAsAction="never"
        android:icon="@drawable/ic_report_gray"
        />
    <item
        android:id="@+id/venue_invite"
        android:title="@string/invite_friends"
        app:showAsAction="never"
        android:icon="@drawable/ic_invite_unfilled"
        />
    <item
        android:id="@+id/share_to"
        android:title="@string/share_to"
        app:showAsAction="never"
        android:icon="@drawable/ic_reply_flipped"
        />
    <item
        android:id="@+id/share_timeline"
        android:title="@string/share"
        app:showAsAction="never"
        android:icon="@drawable/ic_share"
        />
    <item
        android:id="@+id/slots"
        android:title="@string/permitted_time"
        app:showAsAction="never"
        android:icon="@drawable/ic_calender_gray"
        />
    <item
        android:id="@+id/update_photo"
        android:title="@string/update_photo"
        app:showAsAction="never"
        android:icon="@drawable/ic_add_image_gray"
        />
</menu>