<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/interest_edit"
        android:title="@string/suggest_edit"
        app:showAsAction="never"
        android:icon="@drawable/ic_edit_grey"
        />
    <item
        android:id="@+id/interest_children"
        android:title="@string/sub_interests"
        app:showAsAction="never"
        android:icon="@drawable/ic_sub_interest"
        />
    <item
        android:id="@+id/interest_share"
        android:title="@string/share_to"
        app:showAsAction="never"
        android:icon="@drawable/ic_reply_flipped"
        />
    <item
        android:id="@+id/interest_share_on_timeline"
        android:title="@string/share"
        app:showAsAction="never"
        android:icon="@drawable/ic_share"
        />
    <item
        android:id="@+id/interest_invite"
        android:title="@string/invite_fellows"
        app:showAsAction="never"
        android:icon="@drawable/ic_invite_unfilled"
        />
    <item
        android:id="@+id/interest_add_new"
        android:title="@string/add_new_interest"
        app:showAsAction="never"
        android:icon="@drawable/ic_add_gray"
        />
</menu>