<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <!--  <item
        android:id="@+id/follow_venue"
        android:title="@string/follow_venue"
        app:showAsAction="never"
        android:icon="@drawable/ic_venue_unfollowed"
        />-->
    <item
        android:id="@+id/stop_notifications"
        android:title="@string/stop_notifications"
        app:showAsAction="never"
        android:icon="@drawable/ic_stop_notification"
        />
    <item
        android:id="@+id/share_to"
        android:title="@string/share_to"
        app:showAsAction="never"
        android:icon="@drawable/ic_reply_flipped"
        />
    <item
        android:id="@+id/share_timeline"
        android:title="@string/share_on_timeline"
        app:showAsAction="never"
        android:icon="@drawable/ic_share"
        />

    <item
        android:id="@+id/report"
        android:title="@string/report"
        app:showAsAction="never"
        android:icon="@drawable/ic_report_gray"
        />
  <item
      android:id="@+id/upload_video"
      android:icon="@drawable/ic_upload_video"
      android:title="@string/upload_video"
      app:showAsAction="never" />

  <item
      android:id="@+id/upload_file"
      android:icon="@drawable/ic_upload_file"
      android:title="@string/upload_study_material"
      app:showAsAction="never" />
</menu>