<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        app:showAsAction="never"
        android:icon="@drawable/ic_edit_grey"
        />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        app:showAsAction="never"
        android:icon="@drawable/ic_gray_delete"
        />
    <item
        android:id="@+id/share"
        android:title="@string/share_to"
        app:showAsAction="never"
        android:icon="@drawable/ic_reply_flipped"
        />
    <item
        android:id="@+id/request_answer"
        android:title="@string/request_answer"
        app:showAsAction="never"
        android:icon="@drawable/ic_request_answer"

        />
</menu>