<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/follow"
        android:title="@string/follow"
        app:showAsAction="never"
        android:icon="@drawable/ic_follow_unfilled"
        />
    <item
        android:id="@+id/share_to"
        android:title="@string/share_to"
        app:showAsAction="never"
        android:icon="@drawable/ic_reply_flipped"
        />
    <item
        android:id="@+id/request_answer"
        android:title="@string/request_answer"
        app:showAsAction="never"
        android:icon="@drawable/ic_request_answer"
        />
    <item
        android:id="@+id/report"
        android:title="@string/report"
        app:showAsAction="never"
        android:icon="@drawable/ic_report_gray"
        />
</menu>